--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,10 @@
 }
 img {
   border-radius: 20px;
-  width: 3%;
+  width: 30%;
 }
 
-.animal-photos {
+#animal-photos {
   background-color: #444;
   padding: 20px;
 }
